--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-1.49MB/s(Youtube:不良林), server: 134.195.196.89, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇯🇵 日本-974.8KB/s(Youtube:不良林), server: jp-03.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: jp-03.licom.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.76MB/s(Youtube:不良林), server: 138.2.71.189, port: 11188, type: vmess, uuid: 923f14b3-9131-46a9-ef9b-863e8d026078, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hello, ws-headers: {Host: 138.2.71.189}}
-  - {name: 🇺🇸 美国-929.3KB/s(Youtube:不良林), server: 38.143.66.20, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇨🇦 加拿大-363.6KB/s(Youtube:不良林), server: 196.247.59.154, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇫🇷 法国-1.62MB/s(Youtube:不良林), server: 51.195.35.134, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/273213070933, ws-headers: {Host: 51.195.35.134}}
-  - {name: 🇬🇧 英国-478.6KB/s(Youtube:不良林), server: 144.24.88.101, port: 16833, type: vmess, uuid: f5425ccf-3946-4fb4-eb24-5393d78a392f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-291.3KB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-1.18MB/s(Youtube:不良林), server: 172.99.190.61, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-1.03MB/s(Youtube:不良林), server: 38.143.66.20, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇫🇷 法国-561.0KB/s(Youtube:不良林), server: 51.38.118.42, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-1.56MB/s(Youtube:不良林), server: 169.197.141.5, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇺🇸 美国-307.6KB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-457.2KB/s(Youtube:不良林), server: vfly9.win, port: 443, type: vmess, uuid: 838be9ed-d7a8-4da1-b067-b95d2a8782f5, alterId: 10, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /myblog, ws-headers: {Host: vfly9.win}}
+  - {name: 未知国家-457.2KB/s(Youtube:不良林), server: vfly9.win, port: 443, type: vmess, uuid: 838be9ed-d7a8-4da1-b067-b95d2a8782f5, alterId: 10, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /myblog, ws-headers: {Host: vfly9.win}}
   - {name: 🇸🇬 新加坡-1.85MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-336.7KB/s(Youtube:不良林), server: 185.167.116.250, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
+  - {name: 🇺🇸 美国-669.3KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.49MB/s(Youtube:不良林)
-      - 🇯🇵 日本-974.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.76MB/s(Youtube:不良林)
-      - 🇺🇸 美国-929.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-363.6KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.62MB/s(Youtube:不良林)
-      - 🇬🇧 英国-478.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-291.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇫🇷 法国-561.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.56MB/s(Youtube:不良林)
       - 🇺🇸 美国-307.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-457.2KB/s(Youtube:不良林)
+      - 未知国家-457.2KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.85MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-336.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-669.3KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-1.49MB/s(Youtube:不良林)
-      - 🇯🇵 日本-974.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.76MB/s(Youtube:不良林)
-      - 🇺🇸 美国-929.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-363.6KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.62MB/s(Youtube:不良林)
-      - 🇬🇧 英国-478.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-291.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇫🇷 法国-561.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.56MB/s(Youtube:不良林)
       - 🇺🇸 美国-307.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-457.2KB/s(Youtube:不良林)
+      - 未知国家-457.2KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.85MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-336.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-669.3KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.49MB/s(Youtube:不良林)
-      - 🇯🇵 日本-974.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.76MB/s(Youtube:不良林)
-      - 🇺🇸 美国-929.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-363.6KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.62MB/s(Youtube:不良林)
-      - 🇬🇧 英国-478.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-291.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇫🇷 法国-561.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.56MB/s(Youtube:不良林)
       - 🇺🇸 美国-307.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-457.2KB/s(Youtube:不良林)
+      - 未知国家-457.2KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.85MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-336.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-669.3KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-1.49MB/s(Youtube:不良林)
-      - 🇯🇵 日本-974.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.76MB/s(Youtube:不良林)
-      - 🇺🇸 美国-929.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-363.6KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.62MB/s(Youtube:不良林)
-      - 🇬🇧 英国-478.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-291.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇫🇷 法国-561.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.56MB/s(Youtube:不良林)
       - 🇺🇸 美国-307.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-457.2KB/s(Youtube:不良林)
+      - 未知国家-457.2KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.85MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-336.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-669.3KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.49MB/s(Youtube:不良林)
-      - 🇯🇵 日本-974.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.76MB/s(Youtube:不良林)
-      - 🇺🇸 美国-929.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-363.6KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.62MB/s(Youtube:不良林)
-      - 🇬🇧 英国-478.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-291.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇫🇷 法国-561.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.56MB/s(Youtube:不良林)
       - 🇺🇸 美国-307.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-457.2KB/s(Youtube:不良林)
+      - 未知国家-457.2KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.85MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-336.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-669.3KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-1.49MB/s(Youtube:不良林)
-      - 🇯🇵 日本-974.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.76MB/s(Youtube:不良林)
-      - 🇺🇸 美国-929.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-363.6KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.62MB/s(Youtube:不良林)
-      - 🇬🇧 英国-478.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-291.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇫🇷 法国-561.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.56MB/s(Youtube:不良林)
       - 🇺🇸 美国-307.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-457.2KB/s(Youtube:不良林)
+      - 未知国家-457.2KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.85MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-336.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-669.3KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-1.49MB/s(Youtube:不良林)
-      - 🇯🇵 日本-974.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.76MB/s(Youtube:不良林)
-      - 🇺🇸 美国-929.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-363.6KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.62MB/s(Youtube:不良林)
-      - 🇬🇧 英国-478.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-291.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇫🇷 法国-561.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.56MB/s(Youtube:不良林)
       - 🇺🇸 美国-307.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-457.2KB/s(Youtube:不良林)
+      - 未知国家-457.2KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.85MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-336.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-669.3KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
