--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
+  - {name: 🇨🇦 加拿大-247.0KB/s(Youtube:不良林), server: 196.247.59.154, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇺🇸 美国-291.3KB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-1.18MB/s(Youtube:不良林), server: 172.99.190.61, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-1.03MB/s(Youtube:不良林), server: 38.143.66.20, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇫🇷 法国-561.0KB/s(Youtube:不良林), server: 51.38.118.42, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-2.76MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-403.7KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇺🇸 美国-1.56MB/s(Youtube:不良林), server: 169.197.141.5, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-307.6KB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 未知国家-457.2KB/s(Youtube:不良林), server: vfly9.win, port: 443, type: vmess, uuid: 838be9ed-d7a8-4da1-b067-b95d2a8782f5, alterId: 10, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /myblog, ws-headers: {Host: vfly9.win}}
-  - {name: 🇸🇬 新加坡-1.85MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-336.7KB/s(Youtube:不良林), server: 185.167.116.250, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
   - {name: 🇺🇸 美国-669.3KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 阿联酋-2.50MB/s(Youtube:不良林), server: 193.123.67.0, port: 11188, type: vmess, uuid: 280683d0-369c-42e9-be4b-e723a73b7785, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hello, ws-headers: {Host: 193.123.67.0}}
+  - {name: 🇨🇦 加拿大-494.1KB/s(Youtube:不良林), server: 196.247.59.154, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-421.3KB/s(Youtube:不良林), server: 196.247.59.154, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-7.74MB/s(Youtube:不良林), server: 953e517.v9.gladns.com, port: 3331, type: vmess, uuid: 57e0cb4d-eae5-48ec-8091-149dc2b309e0, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /s/953e517.fm.apple.com:89692, ws-headers: {Host: 953e517.v9.gladns.com}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇨🇦 加拿大-247.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-291.3KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
-      - 🇫🇷 法国-561.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.76MB/s(Youtube:不良林)
+      - 🇫🇷 法国-403.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-307.6KB/s(Youtube:不良林)
-      - 未知国家-457.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.85MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-336.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-669.3KB/s(Youtube:不良林)
+      - 阿联酋-2.50MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-494.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-421.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.74MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
+      - 🇨🇦 加拿大-247.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-291.3KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
-      - 🇫🇷 法国-561.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.76MB/s(Youtube:不良林)
+      - 🇫🇷 法国-403.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-307.6KB/s(Youtube:不良林)
-      - 未知国家-457.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.85MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-336.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-669.3KB/s(Youtube:不良林)
+      - 阿联酋-2.50MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-494.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-421.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.74MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇨🇦 加拿大-247.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-291.3KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
-      - 🇫🇷 法国-561.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.76MB/s(Youtube:不良林)
+      - 🇫🇷 法国-403.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-307.6KB/s(Youtube:不良林)
-      - 未知国家-457.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.85MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-336.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-669.3KB/s(Youtube:不良林)
+      - 阿联酋-2.50MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-494.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-421.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.74MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
+      - 🇨🇦 加拿大-247.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-291.3KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
-      - 🇫🇷 法国-561.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.76MB/s(Youtube:不良林)
+      - 🇫🇷 法国-403.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-307.6KB/s(Youtube:不良林)
-      - 未知国家-457.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.85MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-336.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-669.3KB/s(Youtube:不良林)
+      - 阿联酋-2.50MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-494.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-421.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.74MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
+      - 🇨🇦 加拿大-247.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-291.3KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
-      - 🇫🇷 法国-561.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.76MB/s(Youtube:不良林)
+      - 🇫🇷 法国-403.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-307.6KB/s(Youtube:不良林)
-      - 未知国家-457.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.85MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-336.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-669.3KB/s(Youtube:不良林)
+      - 阿联酋-2.50MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-494.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-421.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.74MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇨🇦 加拿大-247.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-291.3KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
-      - 🇫🇷 法国-561.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.76MB/s(Youtube:不良林)
+      - 🇫🇷 法国-403.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-307.6KB/s(Youtube:不良林)
-      - 未知国家-457.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.85MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-336.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-669.3KB/s(Youtube:不良林)
+      - 阿联酋-2.50MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-494.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-421.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.74MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇨🇦 加拿大-247.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-291.3KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
-      - 🇫🇷 法国-561.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.76MB/s(Youtube:不良林)
+      - 🇫🇷 法国-403.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-307.6KB/s(Youtube:不良林)
-      - 未知国家-457.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.85MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-336.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-669.3KB/s(Youtube:不良林)
+      - 阿联酋-2.50MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-494.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-421.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.74MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
